kubernetes/5.4_lets_encrypt_multi_apps/gateway/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: snippet-letsencrypt-multi-demo-gateway   # Use "gateway-infra" in production
